# align

./: .gitignore  CMakeLists.txt  Doxyfile.in  README  align.cpp  align.h  align_config.h.in  align_unittest.cpp  bi-sim.cpp  bi-sim.h  bisim_test.cpp  containers.cpp  containers.h  dictionary.cpp  dictionary.h  main.cpp  mkdict.cpp  mkdict.h  mkdict_main.cpp  params.cpp  params.h  scorers.cpp  scorers.h  string_impl.cpp  string_impl.h  text.cpp  text.h  text_unittest.cpp
CMakeModules/: FindICU.cmake  FindICU.cmake.bak
test_data/: 21_(Ba).txt  65_(M21).txt  test_e.txt  test_f.txt
test_data/dict/: 21-65.dictionary  65-21.dictionary  INDEX  test-r.dictionary  test.dictionary
